# SurveillanceCamera

./: CMakeLists.txt  DetectorV1.0.cpp  LICENSE  README.md  survcamlibV1.0.cpp  survcamlibV1.0.h
